--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,17 +5,27 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    @media @mobile {
+      flex-direction: column;
+      margin: 5% 5%;
+    }
 
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @mobile {
+        width: 100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @mobile {
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
@@ -26,6 +36,9 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+    @media @mobile {
+      flex-direction: column-reverse;
+    }
 
     .text-content {
       padding-left: 1%;
@@ -41,6 +54,9 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+    @media @mobile {
+      width: 90%;
+    }
 
     img {
       border-radius: 10px;
@@ -52,10 +68,34 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @mobile {
+      flex-direction: column;
+      align-items: center;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @mobile {
+        width: 70%;
+      }
     }
   }
 }// home
+
+div.header {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 2%;
+  border-bottom: 2px dashed #C0C0C0;
+  @media @mobile {
+    width: 90%;
+  }
+  img {
+      margin-bottom: 2%;
+  }
+  p {
+      margin-bottom: 2%;
+  }
+}
