--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,35 @@
 // Navigation Styles here
+div.navigation {
+    max-width: 800px;
+    width: 100%;
+    margin: 3% auto;
+    display: flex;
+    align-items: center;
+    @media @mobile {
+        flex-direction: column;
+        align-items: stretch;
+        margin: 5% 0;
+    }
+    h2 {
+        padding-bottom: 0;;
+        @media @mobile {
+            padding-bottom: 2%;
+            text-align: center;
+        }
+    }
+    nav {
+        margin-left: 48%;
+        @media @mobile {
+            margin-left: 0;
+            display: flex;
+            justify-content: space-around;
+        }
+        a {
+            text-decoration: none;
+            font-size: 1.7rem;
+            color: black;
+            padding-right: 15px;
+        }
+    }
+}
+
