--- a/less/home-page.less
+++ b/less/home-page.less
@@ -99,3 +99,44 @@ div.header {
       margin-bottom: 2%;
   }
 }
+
+// Contact Form
+
+/* Style inputs with type="text", select elements and textareas */
+div.table {
+  margin: 5% 20%;
+  font-size: 1.6rem;
+  @media @mobile {
+    width: 5% 10%;
+  }
+  input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px; 
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+  input[type=submit] {
+    background-color: #008081;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #008081;
+  }
+  
+  .container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }  
+}
+
